--- a/prototype/assets/css/styles.css
+++ b/prototype/assets/css/styles.css
@@ -9,20 +9,55 @@ html {
   box-sizing: inherit;
 }
 
+
+/* ---------------Utility Styles----------------- */
+.container{
+  width:80vw;
+  margin: 40px auto;
+  max-width: 900px;
+}
+
+.img-right{
+  float:right;
+  border:1px solid #c0c0c0;
+  padding:10px;
+  margin: 10px 0 10px 20px;
+}
+
+.img-left{
+  float:left;
+  border:1px solid #c0c0c0;
+  padding:10px;
+  margin: 10px 20px 10px 0;
+}
+
+.img-center{
+  display:block;
+  border:1px solid #c0c0c0;
+  padding:10px;
+  margin: 20px auto;
+}
+
+/* Responsive Images */
+
+img{
+  max-width:100%;
+  height:auto;
+}
+
 /* ---------------Global Styles----------------- */
 
 body{
-font-family: proxima-nova,sans-serif;
+ font-family: proxima-nova,sans-serif;
 font-weight: 700;
-font-style: normal;     line-height: 1.5;
-     margin:0;
+font-style: normal;
 }
 
 header.primary{
-  background-color:#f3d4cc;
+  background-color:#f9a0a6;
   text-align:center;
-  color:#ffffff;
-  text-shadow: 2px 2px #c2aaa3;
+  color:#d8dcd2;
+  text-shadow: 2px 2px #94a99e;
   /* Longform */
   padding-top:40px;
   padding-right:40px;
@@ -40,18 +75,23 @@ header.primary{
 }
 
 header.primary h1 {
-  font-size:3.6rem;
-  margin: 20px 0;
+font-family: proxima-nova,sans-serif;
+font-weight: 700;
+font-style: normal;
+font-size:3.5em;
 }
 
 header.primary h1 a{
-  color:#ffffff;
+  color:#d8dcd2;
   text-decoration:none;
 }
 
 header.primary h2{
-  font-size: 2.5em;
-  margin:20px auto 40px;
+font-family: proxima-nova,sans-serif;
+font-weight: 700;
+font-style: normal;
+font-size:1.8em;
+margin-bottom:40px;
 }
 
 header.primary nav{
@@ -71,15 +111,177 @@ header.primary nav ul li{
 }
 
 header.primary nav ul li a:link, header.primary nav ul li a:visited {
-  color:#ffffff;
+  color:#FFFFFF;
   text-decoration:none;
-  background-color:#c2aaa3;
-  background-color: rgba(0,0,0,.4);
+  background-color:#ffd5d3;
   padding:8px 16px;
   border-radius:20px;
   transition:.5s;
+  box-shadow:2px 2px #817e8b;
 }
 
 header.primary nav ul li a:hover, header.primary nav ul li a:active{
-   background-color: rgba(0,0,0,.8);
+  color:#817e8b;
+  background-color: #FFFFFF;
+  transition:1s;
+}
+
+#intro{
+  border-bottom: 1px ridge #c0c0c0;
+  padding-bottom:1.5em;
+}
+
+#intro h2{
+  color:#817e8b;
+}
+
+#intro p{
+  line-height:1.5em;
+}
+
+#content{
+  display:flex;
+  flex-direction:row;
+  justify-content:space-between;
+  border-bottom: 4px dashed #817e8b;
+  padding-bottom:2.6em;
+}
+
+article.post{
+  width:31%;
+  padding:.7em;
+  box-shadow: 0 4px 8px rgba(0,0,0,.4);
+  border-radius:10px;
+  font-size:.9em;
+  transition:.5s;
+}
+
+article.post:hover{
+  box-shadow: 0 16px 32px rgba(0,0,0,.4);
+  transition:1s;
+}
+
+article.post figure{
+  margin:0;
+}
+
+article.post time, article.post figcaption, article.post footer{
+  font-size:.7em;
+  text-transform:uppercase;
+  color:#c0c0c0;
+}
+
+article.post img{
+  border-radius:5px;
+   transition:.5s;
+}
+
+article.post a:link, article.post a:visited {
+  color:#3b638b;
+}
+
+article.post a:hover, article.post a:active {
+  text-decoration:none;
+}
+/* Attribute Selector */
+aside[role="complementary"]{
+  background-color:#d7dbd1;
+  color:#817e8a;
+  padding:2.5em;
+}
+
+aside .container{
+  display:flex;
+  flex-direction:row;
+  justify-content:space-between;
+}
+
+aside article.widget{
+  width:40%;
+}
+
+aside .widget a:link, aside .widget a:hover{
+  color:#f8a0a6;
+  display:block;
+  margin-top:20px;
+  letter-spacing:1.5px
+}
+
+aside .widget footer{
+  display:none;
+}
+
+footer#colophon{
+  background-color:#f9a0a6;
+  
+}
+
+#colophon h6{
+  margin:0;
+  padding:1.4em;
+  text-align:center;
+  font-size:.9rem;
+  text-transform:uppercase;
+  color:#ffffff;
+}
+
+#additional-elements h2{
+  color:#817e8b;
+  border-bottom:4px dashed #817e8b;
+}
+
+a:link, a:visited{
+  color:#36638b;
+}
+a:hover, a:active{
+  text-decoration:none;
+}
+
+#additional-elements h3, #additional-elements h4{
+  border-left: 7px solid #94a99d;
+  padding:5px 10px;
+}
+#additional-elements p{
+  text-align:center;
+}
+
+table{
+  width:100%;
+  border:1px solid #817e8a;
+  border-collapse:collapse;
+  margin-bottom:20px;
+}
+
+caption{
+  font-weight:bold;
+  font-size:1.5rem;
+  margin:10px;
+}
+
+tr:nth-child(3n-7){
+  background:#dcdcdc;
+}
+
+th{
+  background:#817e8a;
+  color:#f8a0a5;
+  text-shadow:1px 1px #FFFFFF;
+  width:33%;
+  padding:10px;
+}
+
+td{
+  border:1px solid #c0c0c0;
+  padding:5px;
+}
+
+td:nth-of-type(n+2) {
+  text-align:right;
+}
+
+tr:hover{
+  background:lightsteelblue;
+}
+#additional-elements li{
+  color:#817e8a;
 }
